rstudio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rstudio-server
  labels:
    app: rstudio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rstudio-server
  template:
    metadata:
      labels:
        app: rstudio-server
    spec:
      containers:
      - name: rstudio
        image: 824622998597.dkr.ecr.us-east-1.amazonaws.com/rstudio:rstudio-server-rc1
        ports:
        - containerPort: 8787
